<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_height="wrap_content"
              android:layout_width="match_parent"
              android:orientation="vertical">
    <Button
        android:id="@+id/main_button_lexicon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_button_lexicon_text"/>
    <Button
        android:id="@+id/main_button_adoptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_button_adoptions_text"/>
    <Button
        android:id="@+id/main_button_events"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_button_events_text"/>
    <Button
        android:id="@+id/main_button_quiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_button_quiz_text"/>
    <Button
        android:id="@+id/main_button_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_button_map_text"/>
    <Button
        android:id="@+id/main_button_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_button_profile_text"/>
</LinearLayout>
