<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <Button
        android:id="@+id/quiz_menu_new_game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quiz_menu_new_game_button_text"/>
    <Button
        android:id="@+id/quiz_menu_leaderboard_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quiz_menu_leaderboard_button_text"/>
    <Button
        android:id="@+id/quiz_menu_badges_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quiz_menu_badges_button_text"/>
    <Button
        android:id="@+id/quiz_menu_settings_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quiz_menu_settings_button_text"/>
    <Button
        android:id="@+id/quiz_menu_help_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quiz_menu_help_button_text"/>
</LinearLayout>