<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            style="@style/ScrollView">

    <LinearLayout android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            android:text="@string/quiz_help_header_text"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginBottom="5dp"
            android:text="@string/quiz_help_basics_text"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginBottom="5dp"
            android:text="@string/quiz_help_game_text"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginBottom="5dp"
            android:text="@string/quiz_help_leaderboard_text"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginBottom="5dp"
            android:text="@string/quiz_help_settings_text"/>

    </LinearLayout>
</ScrollView>