<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            style="@style/ScrollView">

    <LinearLayout android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"
            android:text="@string/quiz_result_header"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="2">

            <TextView
                android:id="@+id/quiz_result_correct_answers_textview"
                style="@style/QuizResultTextView"
                tools:text="Spravne odpovedi: 1 / 10"/>
            <TextView
                android:id="@+id/quiz_result_incorrect_answers_textview"
                style="@style/QuizResultTextView"
                tools:text="Nespravne odpovedi: 9 / 10"/>
            <TextView
                android:id="@+id/quiz_result_total_time_textview"
                style="@style/QuizResultTextView"
                tools:text="Celkový čas: 35 sekund"/>
            <TextView
                android:id="@+id/quiz_result_score_textview"
                style="@style/QuizResultTextView"
                tools:text="Výsledné skóre: 42"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="4"
            android:gravity="center">

            <Button
                android:id="@+id/quiz_result_new_game_button"
                style="@style/QuizResultButton"
                android:text="@string/quiz_result_new_game_button_text"/>
            <Button
                android:id="@+id/quiz_result_leaderboard_button"
                style="@style/QuizResultButton"
                android:text="@string/quiz_result_leaderboard_button_text"/>
            <Button
                android:id="@+id/quiz_result_menu_button"
                style="@style/QuizResultButton"
                android:text="@string/quiz_result_menu_button_text"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>